--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,5 @@
 # English strings go here for Rails i18n
 en:
-  # my_label: "My label"
+  field_affected_projects: "Affected Projects (optional)"
+  field_release_notes: "Release notes"
+  button_send: "Create Deploy"
