--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,6 @@ en:
   field_affected_projects: "Affected Projects (optional)"
   field_release_notes: "Release notes"
   button_send: "Create Deploy"
+  field_customers_deploys_notifications_emails: "Emails to notify customers or external people about deploys"
+  field_deploys_notifications_emails: "Emails to notify company people about deploys"
+  field_abbreviation: "Project name abbreviation"
