Adds state to deploy’s index

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,6 +25,7 @@ en:
       name: 'Name'
       release_notes: 'Release Notes'
       date: 'Date'
+      state: 'State'
       deploys: 'Deploys'
       view: "View"
       edit: "Edit"
