--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -17,46 +17,46 @@ es:
     issue_deploys:
       appears_in_these_deploys: "Despliegues"
   project_deployer_settings:
-    deployer_settings: 'Configuración de Deployer'
+    deployer_settings: "Configuración de Deployer"
   deploys:
     index:
-      new_deploy: 'Crear nuevo despliegue'
-      create_new_deploy: 'Crear nuevo despliegue'
-      name: 'Nombre'
-      release_notes: 'Notas de la versión'
-      date: 'Fecha'
-      state: 'Estado'
-      deploys: 'Despliegues'
+      new_deploy: "Crear nuevo despliegue"
+      create_new_deploy: "Crear nuevo despliegue"
+      name: "Nombre"
+      release_notes: "Notas de la versión"
+      date: "Fecha"
+      state: "Estado"
+      deploys: "Despliegues"
       view: "Ver"
       edit: "Editar"
       are_you_sure: "¿Estás seguro?"
     new:
-      new_deploy: 'Nuevo Despliegue'
+      new_deploy: "Nuevo Despliegue"
       button_send: "Crear Despliegue"
     show:
-      issue: 'Petición %{index}'
-      issues: 'Peticiones'
-      date: 'Fecha'
-      start_time: 'Hora de Inicio'
-      estimated_end_time: 'Hora estimada de fin'
-      release_notes: Notas de la versión
-      affected_projects: Proyectos afectados
-      authorization: Autorización
-      edit: Editar
-      author: Autor
-      version: Versión
-      send_start_mail: Enviar correo de inicio de despliegue
-      send_successful_end_mail: Enviar correo de finalización correcta
-      send_rollback_mail: Enviar correo de finalización fallida
-      send_start_mail_no_client: Enviar correo de inicio de despliegue (no avisar a cliente)
-      send_successful_end_mail_no_client: Enviar correo de finalización correcta (no avisar a cliente)
-      send_rollback_mail_no_client: Enviar correo de finalización fallida (no avisar a cliente)
+      issue: "Petición %{index}"
+      issues: "Peticiones"
+      date: "Fecha"
+      start_time: "Hora de Inicio"
+      estimated_end_time: "Hora estimada de fin"
+      release_notes: "Notas de la versión"
+      affected_projects: "Proyectos afectados"
+      authorization: "Autorización"
+      edit: "Editar"
+      author: "Autor"
+      version: "Versión"
+      send_start_mail: "Enviar correo de inicio de despliegue"
+      send_successful_end_mail: "Enviar correo de finalización correcta"
+      send_rollback_mail: "Enviar correo de finalización fallida"
+      send_start_mail_no_client: "Enviar correo de inicio de despliegue (no avisar a cliente)"
+      send_successful_end_mail_no_client: "Enviar correo de finalización correcta (no avisar a cliente)"
+      send_rollback_mail_no_client: "Enviar correo de finalización fallida (no avisar a cliente)"
     edit:
       button_send: "Guardar Cambios"
     update:
       deploy_updated: "Despliegue actualizado"
     create:
-      new_deploy_created: 'Nuevo despliegue creado correctamente'
+      new_deploy_created: "Nuevo despliegue creado correctamente"
     send_start:
       mails_sent: "Correos enviados"
     send_successful_end:
