--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -17,40 +17,40 @@ zh:
     issue_deploys:
       appears_in_these_deploys: "版本发布"
   project_deployer_settings:
-    deployer_settings: '发布设置'
+    deployer_settings: "发布设置"
   deploys:
     index:
-      new_deploy: '添加发布记录'
-      create_new_deploy: '添加发布记录'
-      name: '发布名称'
-      release_notes: '发布日志'
-      date: '日期'
-      deploys: '发布记录'
+      new_deploy: "添加发布记录"
+      create_new_deploy: "添加发布记录"
+      name: "发布名称"
+      release_notes: "发布日志"
+      date: "日期"
+      deploys: "发布记录"
       view: "查看"
       edit: "编辑"
       are_you_sure: "确定？"
     new:
-      new_deploy: '添加发布记录'
+      new_deploy: "添加发布记录"
       button_send: "添加发布记录"
     show:
-      issue: '任务 %{index}'
-      issues: '任务'
-      date: '日期'
-      start_time: '起始时间'
-      estimated_end_time: '预计结束时间'
-      release_notes: 发布日志
-      affected_projects: 受影响的项目
-      authorization: 授权信息
-      edit: 编辑
-      send_start_mail: 发送发布开始邮件通知
-      send_successful_end_mail: 发送发布成功结束邮件通知
-      send_rollback_mail: 发送发布回退邮件通知
+      issue: "任务 %{index}"
+      issues: "任务"
+      date: "日期"
+      start_time: "起始时间"
+      estimated_end_time: "预计结束时间"
+      release_notes: "发布日志"
+      affected_projects: "受影响的项目"
+      authorization: "授权信息"
+      edit: "编辑"
+      send_start_mail: "发送发布开始邮件通知"
+      send_successful_end_mail: "发送发布成功结束邮件通知"
+      send_rollback_mail: "发送发布回退邮件通知"
     edit:
       button_send: "保存"
     update:
       deploy_updated: "发布记录已更新。"
     create:
-      new_deploy_created: '发布记录已添加。'
+      new_deploy_created: "发布记录已添加。"
     send_start:
       mails_sent: "发布开始邮件通知已发送。"
     send_successful_end:
